# tangram2

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  config.sh  environment.yml  linux_environment.yml  pyproject.toml  requirements.txt  setup.py  ~
.gitlab/issue_templates/: new_method.md
analysis/res/: marker_genes_BC.txt
dev/: build_docs.sh
docs/: _index.tst  conf.py  index.rst
docs/modules/: telegraph.datagen.visify.rst  telegraph.diagnostics.rst  telegraph.methods.__init__.rst  telegraph.methods._dea_utils.rst  telegraph.methods.dea_methods.rst  telegraph.methods.grp_methods.rst  telegraph.methods.imp_methods.rst  telegraph.methods.map_methods.rst  telegraph.methods.policies.rst  telegraph.methods.preprocess.rst  telegraph.methods.rst  telegraph.methods.save_methods.rst  telegraph.methods.utils.rst  telegraph.methods.workflows.rst
docs/source/: conf.py  install.md  telegraph.datagen.cellmix.rst  telegraph.datagen.visify.rst  telegraph.datagen.visify.visify.rst  telegraph.diagnostics.group.rst  telegraph.diagnostics.rst  telegraph.evaluation.rst  telegraph.evaluation.run.rst  telegraph.methods.info.rst  telegraph.methods.map_methods.rst  telegraph.methods.pred_methods.rst  telegraph.methods.utils.rst  telegraph.methods.workflows.rst
envs/: environment.yaml  linux_environment.yml  macosx_environment.yml
examples/eval_config/: CeLEry_config.yaml  Test_SpaOTscMap_pipeline.yaml  compose_config.yaml  compose_config_error.yaml  config.yaml  fuzzy_wf_config.yaml  moscot_config.yaml  tg_config.yaml  v2_config.yaml  v2_run.yaml  wf_config.yaml
notebooks_share/: 2023-08-23-cosmx_first_try.ipynb  2023-09-01-cci-workflow.ipynb  2023-09-22-demo.ipynb  2023-09-29-workflow-demo.ipynb  2023-10-20-grp_check.ipynb  telegraph-demo.ipynb
notebooks_share/.ipynb_checkpoints/: 2023-09-27-CeLEry-demo-checkpoint.ipynb  2023-09-29-workflow-demo-checkpoint.ipynb  2023-10-17-flow-check-checkpoint.ipynb
reqs/: cuda-requirements.txt  requirements.txt
rsc/cellphonedb/: .gitattributes
rsc/eval_config/: config.yaml
rsc/lrt/: nichenetr
rsc/signatures/: mammaprint.csv  pang_t-cell.txt
scripts/synth_data/: run_imod_n_times.py
src/: cli.py
src/.ipynb_checkpoints/: cli-checkpoint.py
src/cccv/: __init__.py  cli.py
src/eval/: .#dea_methods.py  .#metrics.py  .#workflows.py  __init__.py  _grp_utils.py  _methods.py  constants.py  dea_methods.py  full_methods.py  grp_methods.py  info.py  map_methods.py  methods.py  metrics.py  pred_methods.py  preprocess.py  run.py  utils.py  utils.pypy  workflows.py
src/tangram2/: __init__.py
tutorial/: tutorial_tangram2_simulateddata.ipynb
working/: 100323-Run_TangramV2_pipeline.ipynb  hejinwf_config.yaml
(+602 files in other folders)
