[tool.poetry]

name = 'telegraph'
version = '0.1'
authors = [
    "Aicha BenTaieb <bentaiea@gene.com>",
    "Alma Andersson <andera29@gene.com>",
    "Kam Hon Hoi <kamhoi@gene.com>",
    "Shreya Gaddam <gaddams@gene.com>",
]

repository = "https://code.roche.com/rb-aiml-cv-spatial/cci-explore/validation/pipeline"
description = "Cell Cell Communication Validation Framework"
keywords = ["ccc", "interaction","cell cell communication"]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
]


[tool.poetry.dependencies]
python = '>=3.10,<4.0'
anndata = '>=0.10.3'
certifi = '>=2023.11.17'
click = '>=8.1.7'
debugpy = '>=1.8.0'
decorator = '>=5.1.1'
distlib = '>=0.3.7'
gitpython = '>=3.1.40'
glum = '>=2.6.0'
h5py = '>=3.10.0'
identify = '>=2.5.32'
llvmlite = '>=0.41.1'
matplotlib = '>=3.8.2'
matplotlib-inline = '>=0.1.6'
numba = '>=0.58.1'
numexpr = '>=2.8.7'
numpy = '>=1.22.0'
pandas = '>=2.0.0'
pre-commit = '>=3.5.0'
pynndescent = '>=0.5.11'
python-dateutil = '>=2.8.2'
python-json-logger = '>=2.0.7'
pyyaml = '>=6.0.1'
rapidfuzz = '>=3.5.2'
requests = '>=2.31.0'
scanpy = '>=1.9.6'
scikit-image = '>=0.22.0'
scikit-learn = '>=1.3.2'
scipy = '>=1.11.4'
seaborn = '>=0.12.2'
tangram-sc = '>=1.0.4'
terminado = '>=0.18.0'
thefuzz = '>=0.20.0'
threadpoolctl = '>=3.2.0'
tomli = '>=2.0.1'
torch = '>=2.1.1'
torchaudio = '>=2.1.1'
torchvision = '>=0.16.1'
tornado = '>=6.4'
tqdm = '>=4.66.1'
umap-learn = '>=0.5.5'
uri-template = '>=1.3.0'
wandb = '>=0.16.1'
# modified dependencies
celerypy = {git  = 'https://code.roche.com/rb-aiml-cv-spatial/cci-explore/imported-methods/gne-celery.git'}
spaotsc = {git = 'https://code.roche.com/rb-aiml-cv-spatial/cci-explore/imported-methods/gne_spaotsc.git'}
tangram2 = {git = 'https://code.roche.com/tangramgroup/Tangram2.git'}
moscot = "^0.3.3"
igraph = "^0.10.0"
pot = "^0.9.1"
dit = "^1.5"
astropy = "^6.0.0"
louvain = "^0.8.1"
progressbar = "^2.5"

[tool.poetry.scripts]
telegraph = 'telegraph.cli:cli'
